--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
           />
           <nav class="nav__links">
             <a href="#staff" class="nav__link"
-              >Los preferidos de nuestro staff</a
-            >
-            <a class="nav__link">Eventos</a>
+              >Los preferidos de nuestro staff</a>
+            <a class="nav__link">
+            <a href="#events" class="nav__link"
+               >Eventos</a>
             <a class="nav__link">Conviertete en miembro</a>
             <a class="nav__link">Contactos</a>
           </nav>
@@ -115,8 +116,97 @@
             </li>
           </ul>
         </section>
+        <section class="events" id="events">
+          <div class="events__content">
+            <h2 class="events__heading">Próximos eventos:</h2>
+            <h3 class="events__title">
+              En honor de Joan Feynman: mujeres en la astrofísica
+            </h3>
+            <div class="event-info events__info-section">
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_calendar.svg"
+                  alt="Calendar icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">Lunes 12 de enero</p>
+              </div>
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_pin.svg"
+                  alt="Pin icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">
+                  Sala de conferencias y virtual de la biblioteca Triple Peaks
+                </p>
+              </div>
+            </div>
+            <p class="events__description">
+              En este evento, en el que celebramos el nombre de nuestra biblioteca, nuestra
+              invitada nos llevará a través de un viaje para conocer a algunas de las mujeres
+              investigadoras más importantes en el mundo de la ciencia espacial. Es
+              fácil caer en la falsa idea de que este campo está principalmente
+              dominado por hombres, pero nuestra conferencia busca cambiar esa noción y
+              probar que no ha sido así desde, al menos, el siglo
+              XVII.
+            </p>
+            <a href="#" class="events__more">Más eventos &rarr;</a>
+          </div>
+           <div class="events__cover">
+              <img
+                  src="./images/cafe.png"
+                  alt="imagen cafe"
+                  class="events__image"
+               />
+ 
+                <div class="person person_name_feynman">
+                  <p class="person__caption">Joan Feynman</p>
+                  <img
+                    src="./images/person_feynman.png"
+                    alt="joan feyman"
+                    class="person__image person__image_size_l"
+                 />
+                 </div>
+
+              <div class="person person_name_burbige">
+                <p class="person__caption">Margaret Burbidge</p>
+                <img
+                  src="./images/person_burbidge.png"
+                  alt="Margaret Burbidge"
+                  class="person__image person__image_size_m"
+                />
+              </div>
+
+             <div class="person person_name_cannon">
+               <img
+                src="./images/person_cannon.png"
+                alt="Annie Jump Cannon"
+                class="person__image person__image_size_m"
+                />
+               <p class="person__caption">Annie Jump Cannon</p>
+             </div>
+
+              <div class="person person_name_mitchell">
+               <img
+                src="./images/person_mitchell.png"
+                alt="Maria Mitchell"
+                class="person__image person__image_size_s"
+               />
+               <p class="person__caption">Maria Mitchell</p>
+              </div>
+
+                  <div class="person person_name_tarter">
+                    <p class="person__caption">Jill Tarter</p>
+                      <img
+                       src="./images/person_tarter.png"
+                       alt="Jill Tarter"
+                       class="person__image person__image_size_m"
+                       />
+                   </div>
+           </div>     
+        </section>
       </main>
     </div>
   </body>
 </html>
-<!-- comentario reto --> 
