Nueva actualización de mi proyecto

--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
             class="nav__logo"
           />
           <nav class="nav__links">
-            <a href="#staff" class="nav__link"
-              >Los preferidos de nuestro staff</a>
-            <a class="nav__link">
-            <a href="#events" class="nav__link"
-               >Eventos</a>
-            <a class="nav__link">Conviertete en miembro</a>
-            <a class="nav__link">Contactos</a>
+             <a href="#staff" class="nav__link"
+              >Los preferidos de nuestro staff
+             </a>
+
+             <a class="nav__link">
+               <a href="#events" class="nav__link"
+               >Eventos
+              </a>
+
+              <a class="nav__link">Conviertete en miembro</a>
+             <a class="nav__link">Contactos</a>
           </nav>
         </nav>
         <div class="header__content">
@@ -184,7 +188,7 @@
                 alt="Annie Jump Cannon"
                 class="person__image person__image_size_m"
                 />
-               <p class="person__caption">Annie Jump Cannon</p>
+               <p class="person__caption">Annie Cannon</p>
              </div>
 
               <div class="person person_name_mitchell">
