Nueva actualización del proyecto

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                <a href="#events" class="nav__link"
                >Eventos
               </a>
+             </a>
 
               <a class="nav__link">Conviertete en miembro</a>
              <a class="nav__link">Contactos</a>
@@ -188,7 +189,7 @@
                 alt="Annie Jump Cannon"
                 class="person__image person__image_size_m"
                 />
-               <p class="person__caption">Annie Cannon</p>
+               <p class="person__caption">Annie Jump Cannon</p>
              </div>
 
               <div class="person person_name_mitchell">
@@ -214,5 +215,3 @@
     </div>
   </body>
 </html>
-<!-- 
-HOLA -->
