--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
               >Los preferidos de nuestro staff
              </a>
 
-             <a class="nav__link">
+                <a class="nav__link"></a>
                <a href="#events" class="nav__link"
-               >Eventos
+               >Eventos 
               </a>
-             </a>
+         
 
               <a class="nav__link">Conviertete en miembro</a>
              <a class="nav__link">Contactos</a>
