--- a/index.html
+++ b/index.html
@@ -164,17 +164,16 @@
                   alt="imagen cafe"
                   class="events__image"
                />
- 
-                <div class="person person_name_feynman">
-                  <p class="person__caption">Joan Feynman</p>
-                  <img
-                    src="./images/person_feynman.png"
-                    alt="joan feyman"
-                    class="person__image person__image_size_l"
-                 />
-                 </div>
-
-              <div class="person person_name_burbige">
+               
+               <div class="person person_name_feynman">
+                <p class="person__caption">Joan Feynman</p>
+                <img
+                  src="./images/person_feynman.png"
+                  alt="Joan Feynman"
+                  class="person__image person__image_size_l"
+                />
+              </div>
+              <div class="person person_name_burbidge">
                 <p class="person__caption">Margaret Burbidge</p>
                 <img
                   src="./images/person_burbidge.png"
@@ -182,33 +181,30 @@
                   class="person__image person__image_size_m"
                 />
               </div>
-
-             <div class="person person_name_cannon">
-               <img
-                src="./images/person_cannon.png"
-                alt="Annie Jump Cannon"
-                class="person__image person__image_size_m"
+              <div class="person person_name_tarter">
+                <p class="person__caption">Jill Tarter</p>
+                <img
+                  src="./images/person_tarter.png"
+                  alt="Jill Tarter"
+                  class="person__image person__image_size_m"
                 />
-               <p class="person__caption">Annie Jump Cannon</p>
-             </div>
-
-              <div class="person person_name_mitchell">
-               <img
-                src="./images/person_mitchell.png"
-                alt="Maria Mitchell"
-                class="person__image person__image_size_s"
-               />
-               <p class="person__caption">Maria Mitchell</p>
               </div>
-
-                  <div class="person person_name_tarter">
-                    <p class="person__caption">Jill Tarter</p>
-                      <img
-                       src="./images/person_tarter.png"
-                       alt="Jill Tarter"
-                       class="person__image person__image_size_m"
-                       />
-                   </div>
+              <div class="person person_name_mitchell">
+                <img
+                  src="./images/person_mitchell.png"
+                  alt="Maria Mitchell"
+                  class="person__image person__image_size_s"
+                />
+                <p class="person__caption">Maria Mitchell</p>
+              </div>
+              <div class="person person_name_cannon">
+                <img
+                  src="./images/person_cannon.png"
+                  alt="Annie Jump Cannon"
+                  class="person__image person__image_size_m"
+                />
+                <p class="person__caption">Annie Jump Cannon</p>              
+              </div>
            </div>     
         </section>
       </main>
