--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
         </section>
       </main>
       <footer class="footer" id="footer"> 
-        <section class="footer__columns">
-         <div class="footer__column">
+        <section class="footer__columns" id="#footer">
+         <div class="footer__logo">
           <img
             src="./images/logo_white.svg"
             alt="footer Logo">
@@ -309,8 +309,6 @@
          </div>
         </section>
         <p class="footer__copyright"> © 2024 Denise </p>
-            
-        </div>
       </footer>
     </div>
   </body>
