Proyecto Sprint 3 final

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       </main>
       <footer class="footer" id="footer"> 
         <section class="footer__columns" id="#footer">
-         <div class="footer__logo">
+         <div class="footer__column footer__logo">
           <img
             src="./images/logo_white.svg"
             alt="footer Logo">
