Actualización final S3-Etapa 3

--- a/index.html
+++ b/index.html
@@ -276,11 +276,9 @@
       <footer class="footer" id="footer"> 
         <section class="footer__columns" id="#footer">
 
-          <div class="footer__column footer__logo">
-            <img
-            src="./images/logo_white.svg"
-            alt="footer Logo">
-         </div>
+          <div class="footer__column">
+            <img src="./images/logo_white.svg" alt="footer logo" class="footer__logo">
+        </div>
         
          <div class="footer__column footer__column_content_hours">
           <h2 class="footer__column-heading">Horario de apertura</h2>
