please ya que quede version final

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </ul>
          </div>
         </section>
-        <p class="footer__copyright"> © 2024 Denise </p>
+        <p class="footer__copyright"> © 2024 Denise Hanono</p>
       </footer>
     </div>
   </body>
